fix layout bug in sign in und sign up dialog

--- a/sys-src/frontend/src/style/SignUpInDialog.scss
+++ b/sys-src/frontend/src/style/SignUpInDialog.scss
@@ -10,10 +10,11 @@
     padding: 20px;
     text-align: center;
     border-radius: 25px;
+    margin: 10px;
 
     background-color: #181d25;
     .signUpInItems {
-        margin: 10px;
+        margin-top: 10px;
     }
 }
 
